--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,37 @@
-fastapi==0.103.0
-uvicorn==0.30.3
-SQLAlchemy==2.0.32
-PyMySQL==1.1.1
+annotated-types==0.6.0
+anyio==4.2.0
 bcrypt==4.2.0
+cffi==1.17.0
+click==8.1.7
+colorama==0.4.6
+cryptography==43.0.0
+dnspython==2.6.1
+ecdsa==0.19.0
+email_validator==2.2.0
+fastapi==0.103.0
+greenlet==3.0.3
+h11==0.14.0
+httptools==0.6.1
+idna==3.7
+passlib==1.7.4
+pip==24.0
+pyasn1==0.6.0
+pycparser==2.22
+pydantic==2.5.3
+pydantic_core==2.14.6
 PyJWT==2.9.0
+PyMySQL==1.1.1
+python-dotenv==1.0.1
+python-jose==3.3.0
+PyYAML==6.0.1
+rsa==4.9
+setuptools==69.5.1
+six==1.16.0
+sniffio==1.3.0
+SQLAlchemy==2.0.32
+starlette==0.27.0
+typing_extensions==4.11.0
+uvicorn==0.30.3
+watchfiles==0.22.0
+websockets==12.0
+wheel==0.43.0
